--- a/.env
+++ b/.env
@@ -29,12 +29,12 @@ DATABASE_URL="postgresql://pguser:example@localhost:5432/testdb"
 
 # DB_TYPE=postgres
 DB_TYPE=mysql
-DB_HOST=localhost
+DB_HOST=192.168.1.6
 # DB_PORT=5432
-DB_PORT=3306
+DB_PORT=9004
 # DB_USERNAME=pguser
 DB_USERNAME=root
-DB_PASSWORD=example
+DB_PASSWORD=abc123456
 DB_DATABASE=testdb
 DB_AUTOLOAD=true
 DB_SYNC=true 
@@ -44,7 +44,7 @@ DB_SYNC=true
 # Redis配置
 REDIS_HOST=localhost
 REDIS_PORT=6379
-REDIS_PASSWORD=exmaple
+REDIS_PASSWORD=123456
 
 # Mail配置
 MAIL_ON=false
